--- a/package.json
+++ b/package.json
@@ -10,13 +10,18 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@types/react-datepicker": "^6.2.0",
+    "date-fns-jalali": "^4.1.0-0",
+    "formik": "^2.4.6",
     "react": "^18.3.1",
+    "react-date-object": "^2.1.9",
     "react-datepicker": "^7.5.0",
     "react-dom": "^18.3.1",
     "react-multi-date-picker": "^4.5.2",
     "react-router-dom": "^7.0.1",
     "sass": "^1.81.0",
-    "scss": "^0.2.4"
+    "scss": "^0.2.4",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
